[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde_json = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
tokio-websockets = "0.11.3"
hyper = { version = "1.4", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
bincode = "2.0.0"
tokio-tungstenite = "0.26.2"
anyhow = "1.0"
futures-util = "0.3"
port_scanner = "0.1"
log = "0.4.27"
